# Synbad

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml  pages.yml  release.yml
assets/: README.md
assets/scripts/: generate-icons.sh
crates/synbad-audio/: Cargo.toml
crates/synbad-audio/src/: bridge.rs  capture.rs  devices.rs  errors.rs  gain.rs  lib.rs  playback.rs  protocol.rs  rtc.rs  session.rs
crates/synbad-audio/tests/: loopback.rs  str0m_validation.rs
crates/synbad-config/: Cargo.toml
crates/synbad-config/src/: lib.rs  paths.rs
crates/synbad-crypto/: Cargo.toml
crates/synbad-crypto/src/: cipher.rs  handshake.rs  lib.rs
crates/synbad-discovery/: Cargo.toml
crates/synbad-discovery/src/: advertiser.rs  browser.rs  identity.rs  lib.rs  pairing.rs  trust.rs
crates/synbad-gui/: Cargo.toml
crates/synbad-gui/src/: app.rs  ipc_thread.rs  layout_editor.rs  main.rs  monitors.rs  single_instance.rs  tray.rs  update.rs
crates/synbad-gui/src/app/: mod.rs  views.rs
crates/synbad-ipc/: Cargo.toml
crates/synbad-ipc/examples/: smoke.rs
crates/synbad-ipc/src/: client.rs  lib.rs  log_parse.rs  server.rs
crates/synbad-sync/: Cargo.toml
crates/synbad-sync/src/: lib.rs  protocol.rs  versioned.rs
crates/synbad-update/: Cargo.toml
crates/synbad-update/src/: archive.rs  elevate.rs  lib.rs  restart.rs
crates/synbadd/: Cargo.toml
crates/synbadd/src/: audio.rs  binaries.rs  log_sink.rs  main.rs  pairing.rs  supervisor.rs  sync.rs
crates/synbadd/src/supervisor/: config_edit.rs  core_proc.rs  mod.rs  requests.rs
docs/: ARCHITECTURE.md  AUDIO.md  CONFIG-SYNC.md  DISCOVERY.md  LICENSING.md  ROADMAP.md  SECURITY.md  USER-GUIDE.md
site/: README.md  index.html  styles.css
