[workspace]
resolver = "2"
members = [
    "crates/synbad-config",
    "crates/synbad-ipc",
    "crates/synbadd",
    "crates/synbad-gui",
    "crates/synbad-discovery",
    "crates/synbad-sync",
    "crates/synbad-crypto",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/krazyjakee/Synbad"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "process", "time", "signal", "fs"] }
notify = "6"
crossbeam-channel = "0.5"
mdns-sd = "0.19"
uuid = { version = "1", features = ["v4", "serde"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["std"] }
sha2 = "0.10"
hex = "0.4"
interprocess = { version = "2", features = ["tokio"] }
