[package]
name = "synbad-audio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "LAN audio bridge for Synbad: cpal capture/playback + webrtc-rs RTP transport."

[dependencies]
synbad-config = { path = "../synbad-config" }
synbad-crypto = { path = "../synbad-crypto" }
synbad-discovery = { path = "../synbad-discovery" }
synbad-ipc = { path = "../synbad-ipc" }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }

# Audio I/O — cpal abstracts ALSA / CoreAudio / WASAPI behind one API.
cpal = "0.17"

# Pure-Rust resampler used when a device's native sample rate isn't 48 kHz.
rubato = "2"

# Lock-free SPSC ring buffer for moving PCM frames between the cpal callback
# thread (real-time, must not block) and the tokio task that feeds RTP.
ringbuf = "0.4"

# WebRTC stack — sans-I/O str0m. We previously used webrtc-rs 0.17
# but hit an unresolvable DTLS-SRTP key-derivation bug that surfaced
# as `failed to verify rtp auth tag` on every inbound packet. str0m's
# `tests/bidirectional.rs` runs the exact same scenario cleanly, so
# Phase 2 of the port (Cut after the str0m_validation test landed)
# replaces the whole webrtc stack with this.
str0m = { version = "0.19", default-features = false, features = ["aws-lc-rs"] }

# Opus codec — the only str0m audio codec well-suited to LAN
# microphone audio (PCMU/PCMA are 8 kHz telephony-grade). 48 kHz mono
# at ~64 kbps fits comfortably; libopus is small and battle-tested.
opus = "0.3"

# Used directly: `Bytes` for RTP payloads (matches the type webrtc's RTP
# stack already deals in) and `rand` for the per-session RTP sequence
# number + timestamp seeds required by RFC 3550 §5.1.
bytes = "1"
rand = "0.9"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
# Loopback test prints trace output on failure so the panic message
# surfaces the real reason (DTLS/SRTP/ICE state, codec mismatches).
tracing-subscriber = { workspace = true }
