[package]
name = "synbad-ipc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
tokio-server = ["dep:tokio", "dep:tracing"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
directories = { workspace = true }
synbad-config = { path = "../synbad-config" }
interprocess = { workspace = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
