[package]
name = "synbad-sync"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
synbad-config = { path = "../synbad-config" }
synbad-ipc = { path = "../synbad-ipc" }
synbad-discovery = { path = "../synbad-discovery" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
ed25519-dalek = { workspace = true }
rand_core = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
